fix: don't wrap heading and paragraph inside span tag

--- a/src/scss/blocks/core/_heading.scss
+++ b/src/scss/blocks/core/_heading.scss
@@ -2,30 +2,26 @@
 // Heading - Core Gutenberg Block
 //----------------------------------------
 
-.wp-block-heading {
-	@apply block;
+h1 {
+	@apply mb-32;
+}
 
-	h1 {
-		@apply mb-32;
-	}
+h2 {
+	@apply mb-24;
+}
 
-	h2 {
-		@apply mb-24;
-	}
+h3 {
+	@apply mb-20;
+}
 
-	h3 {
-		@apply mb-20;
-	}
+h4 {
+	@apply mb-16;
+}
 
-	h4 {
-		@apply mb-16;
-	}
+h5 {
+	@apply mb-12;
+}
 
-	h5 {
-		@apply mb-12;
-	}
-
-	h6 {
-		@apply mb-8;
-	}
+h6 {
+	@apply mb-8;
 }
