--- a/src/scss/blocks/core/_paragraph.scss
+++ b/src/scss/blocks/core/_paragraph.scss
@@ -1,11 +1,3 @@
 //----------------------------------------
 // Paragraph - Core Gutenberg Block
 //----------------------------------------
-
-.wp-block-paragraph {
-	@apply block;
-
-	.entry-content > & {
-		@apply block;
-	}
-}
